# MoreCode

./: .gitignore  Cargo.toml  README-local.md  README.md  README_zh.md  SELF_ITERATION.md  claude-code-vs-codex-full.md  clippy.toml  package.json  repair-rust.ps1  rust-toolchain.toml
agent/: Cargo.specialized.toml  Cargo.toml
agent/src/: config.rs  config_v2.rs  context.rs  coordinator_agent_entry.rs  error.rs  error_v2.rs  execution_report.rs  handoff.rs  infra_trait_def.rs  lib.rs  lifecycle.rs  lifecycle_v2.rs  pipeline.rs  registry.rs  registry_min.rs  stream.rs  support.rs  test_support.rs  trait_def.rs  trait_def_v2.rs
agent/src/coder/: codegen.rs  mod.rs
agent/src/debugger/: diagnosis.rs
agent/src/doc_writer/: format.rs  mod.rs
agent/src/explorer/: mod.rs
agent/src/impact_analyzer/: mod.rs
agent/src/planner/: mod.rs
agent/src/research/: mod.rs  source.rs
agent/src/reviewer/: mod.rs  rule_engine.rs
agent/src/tester/: framework.rs  mod.rs
cli/: Cargo.toml
cli/src/: cli.rs  init.rs  lib.rs  main.rs
cli/src/command/: config.rs  daemon.rs  doctor.rs  export.rs  memory.rs  mod.rs  othercli.rs  replay.rs  review.rs  run.rs  taskpile.rs  tui.rs  web.rs  workflow.rs
communication/: Cargo.toml
communication/src/: channel_group.rs  constants.rs  error.rs  lib.rs  test_support.rs
communication/src/approval/: mod.rs
communication/src/broadcast/: subscriber.rs
communication/src/control/: mod.rs
communication/src/data_plane/: message.rs  mod.rs
communication/src/throttle/: mod.rs  state_throttler.rs
config/: Cargo.toml
config/src/: agent.rs  app.rs  coordinator.rs  cost.rs  daemon.rs  lib.rs  line_ending.rs  loader.rs  memory.rs  provider.rs  recursive.rs  sandbox.rs  tests.rs  tui.rs  validator.rs
coordinator/: Cargo.toml
coordinator/src/: config.rs  coordinator.rs  error.rs  lib.rs
coordinator/src/intent/: mod.rs
coordinator/src/plan/: allocator.rs  builder.rs  dependency.rs  mod.rs
coordinator/src/routing/: memory_aware.rs
core/: Cargo.toml
core/src/: agent.rs  color.rs  constants.rs  error.rs  lib.rs  line_ending.rs  project.rs  run.rs  task.rs  time.rs  token.rs
core/src/ext/: mod.rs  serde_ext.rs
core/tests/: core_types.rs
crates/mc-communication/: Cargo.toml
crates/mc-communication/src/: channels.rs  constants.rs  error.rs  test_support.rs
crates/mc-communication/src/approval/: request.rs  response.rs
crates/mc-communication/src/broadcast/: event.rs  mod.rs  subscriber.rs
crates/mc-communication/src/control/: message.rs
crates/mc-communication/src/state/: message.rs  mod.rs
crates/mc-communication/src/throttle/: state_throttler.rs
crates/mc-config/: Cargo.toml
crates/mc-config/src/: app.rs  context.rs  daemon.rs  error.rs  loader.rs  tests.rs  validator.rs
crates/mc-context/: Cargo.toml
crates/mc-context/src/: error.rs
crates/mc-context/src/compression/: compressor_agent.rs  l1_global.rs  l2_auto_compact.rs  l4_truncate.rs  strategy.rs
crates/mc-context/src/pool/: layered.rs  mod.rs  platform.rs
crates/mc-context/src/project/: context.rs  conventions.rs  impact.rs  (+1 more)
crates/mc-context/tests/: context_pipeline.rs
crates/mc-coordinator/: Cargo.toml
crates/mc-coordinator/src/: coordinator.rs  error.rs  lib.rs  phase.rs  response.rs
crates/mc-llm/: Cargo.toml
crates/mc-llm/src/: error.rs  lib.rs  response.rs
crates/mc-prompt/: Cargo.toml
crates/mc-prompt/src/: cache_adapter.rs  lib.rs  version.rs  warmup.rs
crates/mc-prompt/tests/: prompt_module.rs
crates/mc-sandbox/: Cargo.toml
crates/mc-sandbox/src/: audit.rs  capability.rs  command.rs  error.rs  guardian.rs  tests.rs  tool.rs
crates/mc-tool/: Cargo.toml
crates/mc-tool/src/: error.rs  permission.rs  registry.rs  types.rs
crates/mc-tool/tests/: mc_tool.rs
daemon/: Cargo.toml
daemon/src/: auto_update.rs  backoff.rs  daemon.rs  error.rs  health.rs  lib.rs  lifecycle.rs  pid.rs  shutdown.rs
daemon/src/taskpile/: cloud.rs  crypto.rs  logger.rs  mod.rs  service.rs  state_machine.rs  store.rs  types.rs  utils.rs
llm/: Cargo.toml
llm/src/: cache_capability.rs  lib.rs  model.rs  request.rs  stream.rs
llm/src/anthropic/: config.rs  mod.rs  provider.rs
llm/src/google/: config.rs  mod.rs  provider.rs
llm/src/mock/: mod.rs  provider.rs
llm/src/openai_compat/: config.rs  mod.rs  preset.rs  provider.rs
llm/src/provider/: mod.rs  trait_def.rs
llm/src/semantic_cache/: config.rs  namespace.rs
llm/src/token/: mod.rs  multimodal.rs
mcp/: Cargo.toml
mcp/src/: client.rs  config.rs  error.rs  lib.rs  server.rs
mcp/tests/: mcp_roundtrip.rs
memory/: Cargo.toml
memory/src/: error.rs  lib.rs  manager.rs  state.rs  update.rs  write_queue.rs
memory/src/letta/: archival.rs  compact.rs  core.rs  mod.rs  procedural.rs  working.rs
memory/src/preference/: learning.rs  mod.rs  user_preferences.rs
memory/src/store/: agent_notes.rs  conventions.rs  manager.rs  mod.rs  overview.rs  risk_areas.rs  tech_stack.rs
prompt/: Cargo.toml
prompt/src/: cache.rs  cache_adapter.rs  error.rs  layer.rs  lib.rs  manager.rs  version.rs  warmup.rs
prompt/src/template/: lock.rs  manager.rs  mod.rs
prompt/src/watcher/: file_mapping.rs
prompt/tests/: prompt_module.rs
recursive/: Cargo.toml
recursive/src/: config.rs  error.rs  filter.rs  lib.rs  limiter.rs  stats.rs
sandbox/: Cargo.toml
sandbox/src/: capability.rs  command_whitelist.rs  error.rs  guardian.rs  lib.rs  path_restriction.rs  permission.rs  policy.rs  tests.rs
sandbox/src/os_layer/: landlock.rs  mod.rs  seccomp.rs  wasm.rs
tool/: Cargo.toml
tool/src/: definition.rs  error.rs  lib.rs  permission.rs  registry.rs  trait_def.rs  types.rs
tool/src/builtin/: browser.rs  file_write.rs  mod.rs
tool/src/catalog/: core.rs  deferred.rs  extended.rs  mod.rs
tui/: Cargo.toml
tui/src/: app.rs  error.rs  event.rs  i18n.rs  lib.rs  runtime.rs  theme.rs
tui/src/view/: agent_status.rs  communication.rs  dashboard.rs  help.rs  log.rs  mod.rs  project.rs  settings.rs  task_progress.rs  token_usage.rs
tui/src/widget/: progress_bar.rs  sparkline.rs  tree.rs
(+182 files in other folders)
