[workspace]
members = [
    "agent",
    "cli",
    "communication",
    "config",
    "context",
    "coordinator",
    "core",
    "daemon",
    "llm",
    "mcp",
    "memory",
    "prompt",
    "recursive",
    "sandbox",
    "tool",
    "tui",
]
resolver = "2"

[workspace.package]
authors = ["MoreCode Contributors"]
edition = "2021"
license = "MIT"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.31"
globset = "0.4.18"
hmac = "0.12.1"
http = "1.3.1"
http-body-util = "0.1.3"
ignore = "0.4.24"
hyper = { version = "1.7.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
libc = "0.2.177"
lru = "0.16.2"
metrics = "0.24.2"
mc-agent = { package = "agent", path = "agent" }
mc-communication = { package = "communication", path = "communication" }
mc-config = { package = "config", path = "config" }
mc-context = { package = "context", path = "context" }
mc-core = { package = "core", path = "core" }
mc-llm = { package = "llm", path = "llm", default-features = false }
mc-mcp = { package = "mcp", path = "mcp" }
mc-memory = { package = "memory", path = "memory" }
mc-recursive = { package = "recursive", path = "recursive" }
mc-sandbox = { package = "sandbox", path = "sandbox" }
mc-tool = { package = "tool", path = "tool" }
mc-tui = { package = "tui", path = "tui" }
notify = "8.2.0"
once_cell = "1.21.3"
ratatui = "0.29.0"
regex = "1.12.2"
rmcp = { version = "1.5.0", default-features = false, features = ["client", "server", "transport-io", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-streamable-http-client-unix-socket", "transport-streamable-http-server", "reqwest"] }
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
seccompiler = "0.5.0"
sha2 = "0.10.9"
shlex = "1.3.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "json"], default-features = false }
tantivy = "0.25.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "sync", "time", "test-util"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
toml = "0.8.23"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
wasmtime = { version = "38.0.4", default-features = false, features = ["async", "cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "38.0.4", default-features = false, features = ["p1"] }
wat = "1.247.0"
