[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "mc_agent"
path = "src/coordinator_agent_entry.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
ignore.workspace = true
mc-context = { package = "context", path = "../context" }
mc-config.workspace = true
mc-core.workspace = true
mc-llm.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
