[package]
name = "morecode-cli"
version = "0.1.0-alpha.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MoreCode Agent - A multi-agent orchestrated AI coding assistant"
repository = "https://github.com/im10furry/MoreCode.git"
keywords = ["ai", "coding", "agent", "morecode"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"

[[bin]]
name = "morecode"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
mc-communication.workspace = true
mc-config.workspace = true
mc-core.workspace = true
mc-daemon = { package = "daemon", path = "../daemon" }
mc-memory.workspace = true
mc-tui.workspace = true
serde_json.workspace = true
tokio.workspace = true
