[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "morecode"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
dirs.workspace = true
mc-agent.workspace = true
mc-communication.workspace = true
mc-config.workspace = true
mc-coordinator = { package = "coordinator", path = "../coordinator" }
mc-core.workspace = true
mc-daemon = { package = "daemon", path = "../daemon" }
mc-llm = { workspace = true, features = ["openai-compat", "anthropic", "google"] }
mc-memory.workspace = true
mc-tui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
uuid.workspace = true
