[package]
name = "communication"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mc_communication"

[dependencies]
chrono.workspace = true
mc-core = { package = "core", path = "../core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
