[package]
name = "coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "mc_coordinator"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
ignore.workspace = true
mc-agent = { package = "agent", path = "../agent" }
mc-context = { package = "context", path = "../context" }
mc-core.workspace = true
mc-llm.workspace = true
mc-recursive = { package = "recursive", path = "../recursive" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
