[package]
name = "daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "mc_daemon"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
mc-config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
rusqlite = { version = "0.32.0", features = ["chrono", "serde_json"] }
reqwest = { version = "0.11.20", features = ["json"] }
ring = "0.16.20"
aes-gcm = "0.10.2"
base64 = "0.21.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempfile.workspace = true
