[package]
name = "memory"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "mc_memory"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
lru.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tantivy.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
