[package]
name = "prompt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "mc_prompt"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
mc-llm.workspace = true
notify.workspace = true
seahash.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-util.workspace = true
