[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mc_sandbox"

[features]
default = []
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
chrono.workspace = true
globset.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
thiserror.workspace = true
tokio.workspace = true
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
nix = { version = "0.31.2", default-features = false, features = ["fs"] }
seccompiler.workspace = true

[dev-dependencies]
tempfile.workspace = true
wat.workspace = true
