[package]
name = "tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mc_tool"

[dependencies]
globset.workspace = true
mc-config.workspace = true
mc-core.workspace = true
mc-sandbox.workspace = true
once_cell.workspace = true
regex.workspace = true
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
