[package]
name = "mc-communication"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
mc-core = { path = "../mc-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
