[package]
name = "mc-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
crossterm.workspace = true
hmac.workspace = true
metrics.workspace = true
regex.workspace = true
seahash.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shlex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
