[package]
name = "mc-coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
ignore.workspace = true
mc-agent = { path = "../mc-agent" }
mc-context = { path = "../mc-context" }
mc-core.workspace = true
mc-llm.workspace = true
mc-recursive = { path = "../mc-recursive" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
