[package]
name = "mc-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["openai-compat"]
openai-compat = ["dep:futures-util", "dep:reqwest"]
anthropic = []
google = []
mock = []

[dependencies]
futures-util = { version = "0.3.31", optional = true }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "stream"], optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
httpmock = "0.7.0"
