[package]
name = "mc-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
globset.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31.2", default-features = false, features = ["fs"] }

[dev-dependencies]
tempfile.workspace = true
