[package]
name = "mc-tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
globset.workspace = true
mc-sandbox.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
